# Course_Work_6

./: .gitignore  pyproject.toml
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: models.py
